<resources>
    <string name="app_name">GeoQuizzer</string>
    <string name="questionBox">Toronto is the capital of canada</string>
    <string name="falseBtn">False</string>
    <string name="trueBtn">True</string>
    <string name="nextBtn">Next</string>
    <string name="correct_toast">You are Correct!</string>
    <string name="incorrect_toast">You are Incorrect.</string>

    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>

    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than
 the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea
 and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river
 in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest
 freshwater lake.</string>
</resources>