<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheatActivity">

    <Button
        android:id="@+id/true_button3"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/trueBtn"
        android:translationX="-20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />

    <Button
        android:id="@+id/false_button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/falseBtn"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="433dp" />

    <Button
        android:id="@+id/cheat_button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="481dp" />

    <Button
        android:id="@+id/next_button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/arrow_right"
        android:text="@string/nextBtn"
        tools:layout_editor_absoluteX="-26dp"
        tools:layout_editor_absoluteY="321dp" />

    <TextView
        android:id="@+id/question_text_view3"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:text="@string/questionBox" />
</androidx.constraintlayout.widget.ConstraintLayout>